--- a/index.html
+++ b/index.html
@@ -6,10 +6,17 @@
   <title>Sample Deployment</title>
   <style>
     body {
-      color: #ffffff;
-      background-color: #007f3f;
+      background-color: pink;
+      color: #333;
       font-family: Arial, sans-serif;
-      font-size: 14px;
+      font-size: 20px;
+      margin: 0;
+      padding: 0;
+      text-align: center;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
     }
     
     h1 {
@@ -27,8 +34,8 @@
 </head>
 <body>
   <div align="center">
-    <h1>Congratulations!</h1>
-    <h2>You have successfully created a pipeline that retrieved this source application from an Amazon S3 bucket and deployed it 
+    <h1>Success</h1>
+    <h2> Congratulations!! You have successfully created a pipeline that retrieved this source application from an Amazon S3 bucket and deployed it 
 	to three Amazon EC2 instances using AWS CodeDeploy.</h2>
     <p>For next steps, read the AWS CodePipeline Documentation. Incedge 2020</p>
   </div>
